--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,16 +3,17 @@
 nav {
     background: black;
     width: 100%;
-    display: block;
+    position: relative;
 }
 
 .imgLogo {
     position:absolute;
-    left: 0;
-    top: 10px;
+    top: 1%;
     width: 100%;
 }
 
-.ajSlide {
-    width: auto;
+.slideAju {
+    padding-top: 150px; 
+    width: 100%; 
+    height: 15%;
 }
