--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,4 +51,15 @@ aside {
     border-radius: 1px;
 }
 
+.imgEditores {
+    border-radius: 50%;
+    width: 130%;
+}
+
+.fontSize {
+    font-size: 1em;
+}
+
 #meulink { color: rgb(255, 255, 255); padding-left: 2%; }
+
+#linkRed { color: rgb(255, 0, 0);}
