--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2775,7 +2775,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-danger {
-  color: #dc3545;
+  color: #ffffff;
   background-color: transparent;
   background-image: none;
   border-color: #dc3545;
@@ -2792,7 +2792,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-danger.disabled, .btn-outline-danger:disabled {
-  color: #dc3545;
+  color: #ffffff;
   background-color: transparent;
 }
 
