--- a/css/contstyle.css
+++ b/css/contstyle.css
@@ -25,11 +25,12 @@ aside {
 .imgLogo {
     position:absolute;
     top: 1%;
-    width: 85%;
+    right: 0;
+    left: 0;
 }
 
 .carousel-auto {
-    padding-top: 130px; 
+    padding-top: 135px; 
     width: 100%; 
     height: 15%;
 }
@@ -38,7 +39,7 @@ aside {
 .bgGrid {
     background-color: black;
     position: relative;
-    opacity: 75%;
+    opacity: 95%;
     top: -7%;
     width: 100%;
 }
@@ -52,8 +53,43 @@ aside {
 
 #linkRed { color: rgb(255, 0, 0);}
 
+#linkWhite { color: rgb(255, 255, 255);}
+
 .textCenter {
     text-align: center;
+}
+
+/* Classes, para a area de Contatos de Redes Socias do site*/
+.imgface {
+    background-image: url(../img/redesocial/facebook.png);
+    width: 100%;
+    height: 4%;
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+
+.imginstagram {
+    background-image: url(../img/redesocial/instagram.png);
+    width: 100%;
+    height: auto;
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+
+.imgtwitter {
+    background-image: url(../img/redesocial/twitter.png);
+    width: 100%;
+    height: auto;
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+
+@media screen and (max-width:480px) {
+    main {width: 100%; float: none;}
+    .imgLogo {position: none; top: 100%;}
+    .textCenter {font-size: 100%;}
+    aside {display: none;}
+
 }
 
 
